--- a/package.json
+++ b/package.json
@@ -2,21 +2,20 @@
   "name": "for_your_skin_type_frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9090",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "create-react-app": "^1.2.1",
+    "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "[module-name]": false   
   }
 }
