[Add] update all files - login / logout / signup function done

--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "for_your_skin_type_frontend",
+  "name": "for_your_skin_type",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:9090",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
-    "create-react-app": "^1.2.1",
-    "http-proxy-middleware": "^2.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "node-sass": "^7.0.1",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.3",
+    "proxy": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-scripts": "5.0.0",
+    "sass": "^1.49.7",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "browser": {
-    "[module-name]": false   
-  }
+  "proxy": "http://localhost:9090"
 }
